pkg/workloads/pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
  labels:
    app: pihole
  # annotations:
    # kubernetes.io/ingress.class: traefik
spec:
  selector:
    app: pihole
  ports:
  - name: 53-53-udp
    nodePort: 30053
    port: 1054
    protocol: UDP
    targetPort: 1053
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
  labels:
    app: pihole
  # annotations:
    # kubernetes.io/ingress.class: traefik
spec:
  selector:
    app: pihole
  type: LoadBalancer
  ports:
  - name: www
    port: 8091
    targetPort: 8090
    protocol: TCP
